force-app/main/default/objects/Contract/fields/Aditivo__c.field-meta.xml
<CustomField>
    <fullName>Aditivo__c</fullName>
    <label>Aditivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TipoContrato__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alteração de contrato</fullName>
            </value>
            <value>
                <fullName>Renovação com mesma taxa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>