force-app/main/default/objects/Contract/fields/BoletimSubscricao__c.field-meta.xml
<CustomField>
    <fullName>BoletimSubscricao__c</fullName>
    <label>Boletim de Subscrição</label>
    <length>20</length>
    <type>Text</type>
</CustomField>