force-app/main/default/objects/Contract/fields/CET__c.field-meta.xml
<CustomField>
    <fullName>CET__c</fullName>
    <label>CET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>