force-app/main/default/objects/Contract/fields/ContratoPai__c.field-meta.xml
<CustomField>
    <fullName>ContratoPai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato pai</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contratos filhos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>