force-app/main/default/objects/Contract/fields/CriadoPorAutomacao__c.field-meta.xml
<CustomField>
    <fullName>CriadoPorAutomacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criado por automação</label>
    <type>Checkbox</type>
</CustomField>