force-app/main/default/objects/Contract/fields/DataFinalContrato__c.field-meta.xml
<CustomField>
    <fullName>DataFinalContrato__c</fullName>
    <label>Data final do contrato</label>
    <type>Date</type>
</CustomField>