force-app/main/default/objects/Contract/fields/DataVencimentoContrato__c.field-meta.xml
<CustomField>
    <fullName>DataVencimentoContrato__c</fullName>
    <formula>IF( 
    MONTH(StartDate) + ContractTerm &lt;= 12, 
    DATE( 
        YEAR(StartDate), 
        MONTH(StartDate) + ContractTerm, 
        IF( 
            WEEKDAY(DATE(YEAR(StartDate), MONTH(StartDate) + ContractTerm, 1)) &gt; 1, 
            2 + (9 - WEEKDAY(DATE(YEAR(StartDate), MONTH(StartDate) + ContractTerm, 1))), 
            1 
        ) 
    ), 
    DATE( 
        YEAR(StartDate) + FLOOR((MONTH(StartDate) + ContractTerm - 1) / 12), 
        MOD(MONTH(StartDate) + ContractTerm - 1, 12) + 1, 
        IF( 
            WEEKDAY(DATE(YEAR(StartDate) + FLOOR((MONTH(StartDate) + ContractTerm - 1) / 12), MOD(MONTH(StartDate) + ContractTerm - 1, 12) + 1, 1)) &gt; 1, 
            2 + (9 - WEEKDAY(DATE(YEAR(StartDate) + FLOOR((MONTH(StartDate) + ContractTerm - 1) / 12), MOD(MONTH(StartDate) + ContractTerm - 1, 12) + 1, 1))), 
            1 
        ) 
    ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de vencimento do contrato</label>
    <type>Date</type>
</CustomField>