force-app/main/default/objects/Contract/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <formula>Account.Documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento</label>
    <type>Text</type>
</CustomField>