force-app/main/default/objects/Contract/fields/Especie__c.field-meta.xml
<CustomField>
    <fullName>Especie__c</fullName>
    <label>Espécie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subordinada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>