force-app/main/default/objects/Contract/fields/EstadoCivil__c.field-meta.xml
<CustomField>
    <fullName>EstadoCivil__c</fullName>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solteiro</fullName>
            </value>
            <value>
                <fullName>Casado</fullName>
            </value>
            <value>
                <fullName>Separado</fullName>
            </value>
            <value>
                <fullName>Divorciado</fullName>
            </value>
            <value>
                <fullName>Viúvo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>