force-app/main/default/objects/Contract/fields/Garantia__c.field-meta.xml
<CustomField>
    <fullName>Garantia__c</fullName>
    <label>Garantia</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subtipo__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Aval</fullName>
            </value>
            <value>
                <fullName>Cartão</fullName>
            </value>
            <value>
                <fullName>Contrato</fullName>
            </value>
            <value>
                <fullName>Devedor solidário</fullName>
            </value>
            <value>
                <fullName>Duplicatas</fullName>
            </value>
            <value>
                <fullName>Estoque</fullName>
            </value>
            <value>
                <fullName>Imóvel</fullName>
            </value>
            <value>
                <fullName>Recebíveis</fullName>
            </value>
            <value>
                <fullName>Veículo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>