force-app/main/default/objects/Contract/fields/IRDeduzido__c.field-meta.xml
<CustomField>
    <fullName>IRDeduzido__c</fullName>
    <label>IR deduzido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>