force-app/main/default/objects/Contract/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <inlineHelpText>Informar o motivo do contrato não dar segmento.</inlineHelpText>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alteração de proposta</fullName>
            </value>
            <value>
                <fullName>Dados incorretos</fullName>
            </value>
            <value>
                <fullName>Desistência do cliente</fullName>
            </value>
            <value>
                <fullName>Erro de preenchimento</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Transferência não realizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>