force-app/main/default/objects/Contract/fields/NumeroProposta__c.field-meta.xml
<CustomField>
    <fullName>NumeroProposta__c</fullName>
    <label>Número da proposta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>