force-app/main/default/objects/Contract/fields/pendente__c.field-meta.xml
<CustomField>
    <fullName>pendente__c</fullName>
    <label>% pendente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>