force-app/main/default/objects/Contract/fields/PercentualGarantia__c.field-meta.xml
<CustomField>
    <fullName>PercentualGarantia__c</fullName>
    <label>Percentual da garantia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>