force-app/main/default/objects/Contract/fields/PrazoContrato__c.field-meta.xml
<CustomField>
    <fullName>PrazoContrato__c</fullName>
    <formula>PrazoContratoDias__c / 30.44</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo do contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>