force-app/main/default/objects/Contract/fields/PrazoContratoDias__c.field-meta.xml
<CustomField>
    <fullName>PrazoContratoDias__c</fullName>
    <formula>DataFinalContrato__c-  Oportunidade__r.DataAporte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo do contrato (dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>