force-app/main/default/objects/Contract/fields/PrazodContrato__c.field-meta.xml
<CustomField>
    <fullName>PrazodContrato__c</fullName>
    <label>Prazo do Contrato</label>
    <length>10</length>
    <type>Text</type>
</CustomField>