force-app/main/default/objects/Contract/fields/RemuneracaoBruta__c.field-meta.xml
<CustomField>
    <fullName>RemuneracaoBruta__c</fullName>
    <label>Remuneração bruta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>