force-app/main/default/objects/Contract/fields/RendimentoBruto__c.field-meta.xml
<CustomField>
    <fullName>RendimentoBruto__c</fullName>
    <label>Rendimento bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>