force-app/main/default/objects/Contract/fields/Renovacao__c.field-meta.xml
<CustomField>
    <fullName>Renovacao__c</fullName>
    <description>Gerente de Investimentos, Quer poder preencher o campo Renovação, Para que o time de formalização possa realizar a elaboração do contrato com as regras correspondentes.</description>
    <label>Renovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prorrogação sem pagamento de rendimento</fullName>
            </value>
            <value>
                <fullName>Prorrogação com pagamento de juros (rendimento)</fullName>
            </value>
            <value>
                <fullName>Renovação com pagamento parcial do principal</fullName>
            </value>
            <value>
                <fullName>Renovação com pagamento parcial do principal + juros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>