force-app/main/default/objects/Contract/fields/Resgate__c.field-meta.xml
<CustomField>
    <fullName>Resgate__c</fullName>
    <label>Resgate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Somente rendimento</fullName>
            </value>
            <value>
                <fullName>Parcial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>