force-app/main/default/objects/Contract/fields/Serie__c.field-meta.xml
<CustomField>
    <fullName>Serie__c</fullName>
    <label>Série</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1ª</fullName>
            </value>
            <value>
                <fullName>2ª</fullName>
            </value>
            <value>
                <fullName>3ª</fullName>
            </value>
            <value>
                <fullName>4ª</fullName>
            </value>
            <value>
                <fullName>5ª</fullName>
            </value>
            <value>
                <fullName>6ª</fullName>
            </value>
            <value>
                <fullName>7ª</fullName>
            </value>
            <value>
                <fullName>8ª</fullName>
            </value>
            <value>
                <fullName>9ª</fullName>
            </value>
            <value>
                <fullName>10ª</fullName>
            </value>
            <value>
                <fullName>11ª</fullName>
            </value>
            <value>
                <fullName>12ª</fullName>
            </value>
            <value>
                <fullName>13ª</fullName>
            </value>
            <value>
                <fullName>14ª</fullName>
            </value>
            <value>
                <fullName>15ª</fullName>
            </value>
            <value>
                <fullName>16ª</fullName>
            </value>
            <value>
                <fullName>17ª</fullName>
            </value>
            <value>
                <fullName>18ª</fullName>
            </value>
            <value>
                <fullName>19ª</fullName>
            </value>
            <value>
                <fullName>20ª</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>