force-app/main/default/objects/Contract/fields/StatusContrato__c.field-meta.xml
<CustomField>
    <fullName>StatusContrato__c</fullName>
    <label>Status Do Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Liquidado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>