force-app/main/default/objects/Contract/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TipoContrato__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital de giro</fullName>
            </value>
            <value>
                <fullName>Desconto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>