force-app/main/default/objects/Contract/fields/TaxaMantida__c.field-meta.xml
<CustomField>
    <fullName>TaxaMantida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxa mantida</label>
    <type>Checkbox</type>
</CustomField>