force-app/main/default/objects/Contract/fields/TipoContrato__c.field-meta.xml
<CustomField>
    <fullName>TipoContrato__c</fullName>
    <label>Tipo de contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empréstimo</fullName>
            </value>
            <value>
                <fullName>Novo negócio</fullName>
            </value>
            <value>
                <fullName>Novo aporte</fullName>
            </value>
            <value>
                <fullName>Renovação</fullName>
                <isActive>false</isActive>
                <label>Renovação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>