force-app/main/default/objects/Contract/fields/UnidadeNegocio__c.field-meta.xml
<CustomField>
    <fullName>UnidadeNegocio__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidade de Negócio</label>
    <type>Text</type>
</CustomField>