force-app/main/default/objects/Contract/fields/utilizado__c.field-meta.xml
<CustomField>
    <fullName>utilizado__c</fullName>
    <label>% utilizado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>