force-app/main/default/objects/Contract/fields/valorResgate__c.field-meta.xml
<CustomField>
    <fullName>valorResgate__c</fullName>
    <label>Valor do Resgate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>