force-app/main/default/objects/Contract/validationRules/AlterarDataFimContrato.validationRule-meta.xml
<ValidationRule>
    <fullName>AlterarDataFimContrato</fullName>
    <active>true</active>
    <description>Não permite alterar a data se o contrato estiver na fase Aguardando elaboração</description>
    <errorConditionFormula>AND(ISCHANGED( DataFinalContrato__c ),
ISPICKVAL(Status, &apos;Aguardando elaboração&apos;))</errorConditionFormula>
    <errorMessage>Para alterar a data final do contrato, altere seu status para &quot;Elaboração de contrato&quot;</errorMessage>
</ValidationRule>