force-app/main/default/objects/Contract/validationRules/ContratoPai.validationRule-meta.xml
<ValidationRule>
    <fullName>ContratoPai</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL( TipoContrato__c , &apos;Renovação&apos;),
    TaxaMantida__c == true,
    ISBLANK(ContratoPai__c)
)</errorConditionFormula>
    <errorDisplayField>ContratoPai__c</errorDisplayField>
    <errorMessage>Para contratos de renovação com mesma taxa, é obrigatório informar o contrato pai.</errorMessage>
</ValidationRule>