force-app/main/default/objects/Contract/validationRules/ImpedeDesassociacaoOportunidade.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedeDesassociacaoOportunidade</fullName>
    <active>true</active>
    <description>Regra que impede a desassociação da oportunidade que iniciou o contrato.</description>
    <errorConditionFormula>AND(
				ISCHANGED(Oportunidade__c),
				ISBLANK(Oportunidade__c)
)</errorConditionFormula>
    <errorDisplayField>Oportunidade__c</errorDisplayField>
    <errorMessage>Não é possível desassociar a oportunidade que iniciou este contrato.</errorMessage>
</ValidationRule>