force-app/main/default/objects/Contract/validationRules/validacaoValorResgate.validationRule-meta.xml
<ValidationRule>
    <fullName>validacaoValorResgate</fullName>
    <active>true</active>
    <description>Esta regra valida se no campo &quot;Resgate&quot; o valor selecionado foi &quot;Parcial&quot; e com isso o campo &quot;Valor do resgate&quot; se torna obrigatorio.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Resgate__c, &apos;Parcial&apos;), 
    ISBLANK(valorResgate__c)
)</errorConditionFormula>
    <errorDisplayField>valorResgate__c</errorDisplayField>
    <errorMessage>Para resgate parcial é obrigatório preencher o valor do resgate efetuado.</errorMessage>
</ValidationRule>