force-app/main/default/objects/Contract/listViews/Contratos_Investimentos.listView-meta.xml
<ListView>
    <fullName>Contratos_Investimentos</fullName>
    <columns>UnidadeNegocio__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>DataFinalContrato__c</columns>
    <columns>PrazoContrato__c</columns>
    <columns>PrazoContratoDias__c</columns>
    <columns>Produto__c</columns>
    <columns>Taxa__c</columns>
    <columns>ValorContrato__c</columns>
    <columns>Periodo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UnidadeNegocio__c</field>
        <operation>equals</operation>
        <value>Investimentos</value>
    </filters>
    <label>Contratos Investimentos</label>
</ListView>